2025-12-05T01:05:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19949169032 # 1346
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
* notice: last 14d: unq all: 10 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1094 3168 / 1105 3182
* notice: next accum: outdated-unq outdated-all / unq all: 1095 3169 / 1105 3182
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-11-20] / []

2025-12-03T12:29:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19893861793 # 1343
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: last 14d: unq all: 11 14
* notice: prev accum: outdated-unq outdated-all / unq all: 1094 3168 / 1104 3181
* notice: next accum: outdated-unq outdated-all / unq all: 1094 3168 / 1105 3182
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-12-03]

2025-12-03T01:06:08Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19878782462 # 1342
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: last 14d: unq all: 10 13
* notice: prev accum: outdated-unq outdated-all / unq all: 1092 3161 / 1101 3177
* notice: next accum: outdated-unq outdated-all / unq all: 1094 3168 / 1104 3181
* notice: prev exec diff / last date diff / accum: unq all: +3 +4 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [2025-11-18] / [2025-12-02]

2025-12-02T01:05:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19843044881 # 1340