@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-05T01:05:59Z",
+  "timestamp" : "2025-12-05T12:28:47Z",
   "count_outdated" : 3169,
   "uniques_outdated" : 1095,
-  "count" : 3182,
-  "uniques" : 1105,
+  "count" : 3184,
+  "uniques" : 1107,
   "views" : [
     {
       "timestamp": "2025-11-22T00:00:00Z",
@@ -76,6 +76,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-12-05T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
