@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 10,
+  "count": 15,
+  "uniques": 12,
   "views": [
     {
       "timestamp": "2025-11-22T00:00:00Z",
@@ -41,6 +41,11 @@
       "timestamp": "2025-12-03T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-12-05T00:00:00Z",
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
