@@ -1,3 +1,12 @@
+2025-12-05T12:28:47Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19962969198 # 1347
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
+* notice: last 14d: unq all: 12 15
+* notice: prev accum: outdated-unq outdated-all / unq all: 1095 3169 / 1105 3182
+* notice: next accum: outdated-unq outdated-all / unq all: 1095 3169 / 1107 3184
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [] / [2025-12-05]
+
 2025-12-05T01:05:59Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19949169032 # 1346
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-05
